<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical"
    >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabavisos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_campana"
            android:text="@string/tabavisos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabhabitacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_habitacion"
            android:text="@string/tabhabitacion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabdosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_dosis"
            android:text="@string/tabdosis" />
    </com.google.android.material.tabs.TabLayout>

<androidx.viewpager.widget.ViewPager
    android:id="@+id/viewpager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

</LinearLayout>