<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlador.Avisos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="782dp">

        <TextView
            android:id="@+id/nombpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/nombpa"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tabdosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/notificaciones"
            android:textColor="#0C3688"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombpa" />

        <TableLayout
            android:layout_width="310dp"
            android:layout_height="513dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabdosis">

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="250dp"
                android:layout_height="88dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bloque1"
                    android:layout_width="308dp"
                    android:layout_height="159dp"
                    android:layout_marginTop="20dp"
                    android:background="#0C3688"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="20dp">

                    <TextView
                        android:id="@+id/Hora_cout"
                        android:layout_width="144dp"
                        android:layout_height="46dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="52dp"
                        android:text="13/10/2021 16:00"
                        android:textColor="@color/design_default_color_background"
                        android:textColorHighlight="@color/white"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/HoraSolo"
                        app:layout_constraintTop_toBottomOf="@+id/medicamento" />

                    <TextView
                        android:id="@+id/txtUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/motivo"
                        android:textColor="#FF5722"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/medicamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/medicamento"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/txtUsername"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/HoraSolo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/Hora"
                        android:textColor="#FF5722"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bloque1"
                    android:layout_width="219dp"
                    android:layout_height="151dp"
                    android:layout_marginTop="20dp"
                    android:background="#0C3688"
                    android:bottomRightRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tableRow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bloque1"
                    tools:layout_editor_absoluteY="1dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Motivo"
                        android:textColor="#FF5722"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="16dp"
                        android:text="Visita médico"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="148dp"
                        android:layout_height="38dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="44dp"
                        android:text="13/10/2021 16:00"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="44dp"
                        android:text="Fecha y Hora"
                        android:textColor="#FF5722"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

            <TableRow
                android:layout_width="237dp"
                android:layout_height="185dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bloque1"
                    android:layout_width="wrap_content"
                    android:layout_height="132dp"
                    android:layout_marginTop="20dp"
                    android:background="#0C3688"
                    android:bottomRightRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tableRow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bloque1"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:text="Fecha y Hora"
                        android:textColor="#FF5722"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Motivo"
                        android:textColor="#FF5722"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="16dp"
                        android:text="Visita médico"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/textView12"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="147dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="28dp"
                        android:text="13/10/2021 16:00"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>