<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/habs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textoDoctor"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="337dp"
        android:layout_height="564dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habs"
        app:layout_constraintVertical_bias="0.132">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bloque1"
                android:layout_width="399dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="#0C3688">

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="78dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/motivo"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textoAviso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/textoAviso"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    app:layout_constraintStart_toEndOf="@+id/txtUsername"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bloque1"
                android:layout_width="399dp"
                android:layout_height="54dp"
                android:layout_marginTop="30dp"
                android:background="#0C3688">

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="78dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Motivo"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textoAviso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/textoAviso"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    app:layout_constraintStart_toEndOf="@+id/txtUsername"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bloque1"
                android:layout_width="399dp"
                android:layout_height="59dp"
                android:layout_marginTop="30dp"
                android:background="#0C3688">

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="78dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Motivo"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textoAviso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/textoAviso"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    app:layout_constraintStart_toEndOf="@+id/txtUsername"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bloque1"
                android:layout_width="369dp"
                android:layout_height="58dp"
                android:layout_marginTop="30dp"
                android:background="#0C3688">

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="78dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Motivo"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textoAviso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/textoAviso"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    app:layout_constraintStart_toEndOf="@+id/txtUsername"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_anyadir" />

</androidx.constraintlayout.widget.ConstraintLayout>